day-15/arquivos/policy-4/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
    - name: disallow-root-user
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Running containers as root user is not allowed."
        pattern:
          spec:
            containers:
              - name: "*"
                securityContext:
                  runAsNonRoot: true
